tests/base/invalid/ListAccess_CompileFail_1.whiley


int f([int] xs, real y):
    return xs[y]
